src/tests/errors/lexer/006.ura
// parse_errors/006 — `use` with unclosed quote
use "@/header

main():
    output("hi\n")